--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@
 :root {
     --clr-white: #ffffff;
     --clr-text: #121212;
-    --clr-accent: rgb(4, 112, 112);
-    --clr-bg: lightblue;
+    --clr-accent: #495E57;
+    --clr-bg: #ECE3CE;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
@@ -117,10 +121,27 @@ main {
     display: grid;
     grid-template-rows: 3fr 2fr;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    transition: scale ease 0.3s;
+}
+
+.card a:hover {
+    scale: 1.25;
+}
+
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
+}
+
+.card:hover {
+    scale: 1.05;
 }
 
 .card-image {
     background-color: var(--clr-accent);
+    overflow: hidden;
 }
 
 .card-title {
@@ -128,7 +149,6 @@ main {
     justify-content: space-between;
     align-items: center;
     font-size: 1rem;
-
 }
 
 .card-description {
