--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid black; */
 }
 
 :root {
@@ -29,7 +28,7 @@ body {
 }
 
 .wrapper {
-    max-width: 800px;
+    max-width: 960px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -136,6 +135,7 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
    
 }
 
